[metadata]
name = Japan-Lizard
version = 1.0.0
author = Mariano Soto
author_email = marianolopezhoy@hotmail.com
description = A database module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OwEn-GaTO/Japan
project_urls =
    Bug Tracker = https://github.com/OwEn-GaTO/Japan/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src